# MKLinkV4_Extra

./: .gitignore  .gitmodules  README.md
01-arm_2d_sample_fire/: CMakeLists.txt
01-arm_2d_sample_fire/common/adapt/: spi_sd_adapt.h
01-arm_2d_sample_fire/config/: DAP_config.h  arm_2d_cfg.h  cmsis_compiler.h  flash_port_user.h  perfc_port_user.c  perfc_port_user.h  pika_config.c  pika_config.h  queue_port_user.h  rg_app_cfg.h  rtconfig.h  usb_config.h  user_app_cfg.h
01-arm_2d_sample_fire/lcd/: st7789.c
01-arm_2d_sample_fire/lcd/arm2d_port/: arm_2d_disp_adapter_0.c  arm_2d_disp_adapter_0.h  lcd_spi_port_hpm.c
01-arm_2d_sample_fire/lcd/reference_gui/: ref_gui.c  ref_gui_cfg.h
01-arm_2d_sample_fire/linkers/segger/: flash_xip.icf
01-arm_2d_sample_fire/scripts/: cmd.txt
01-arm_2d_sample_fire/src/: cdc_acm.c  main.c  power_control.c  power_control.h
01-arm_2d_sample_fire/src/QMI8658/: QMI8658.c  QMI8658.h  drv_QMI8658.c  drv_QMI8658.h
01-arm_2d_sample_fire/src/key_module/: key_encoder.c  key_task.h
01-arm_2d_sample_fire/src/scene/: arm_2d_scene_0.c  arm_2d_scene_0.h  arm_2d_scene_space_badge.c  arm_2d_scene_user_button.c  arm_2d_scene_user_button.h  arm_2d_scene_user_console_window.c  arm_2d_scene_user_console_window.h  arm_2d_scene_user_matrix.c  arm_2d_scene_user_matrix.h  arm_2d_scene_user_menu.c  arm_2d_scene_user_menu.h  arm_2d_scene_user_mono_list.h  arm_2d_scene_user_radars.c  arm_2d_scene_user_radars.h  arm_2d_scene_user_rickrolling.c  arm_2d_scene_user_rickrolling.h  arm_2d_scene_user_scope.c  arm_2d_scene_user_scope.h  arm_2d_scene_user_space_badge.h  arm_2d_scene_user_text_tracking_list.c  arm_2d_scene_user_text_tracking_list.h  arm_2d_scene_user_waveform.c  arm_2d_scene_user_waveform.h  arm_2d_user_navigation.c  arm_2d_user_navigation.h  arm_2d_user_scene_large_lmsk.c  arm_2d_user_scene_large_lmsk.h  arm_2d_user_scene_lmsk.c  arm_2d_user_scene_lmsk.h  arm_2d_user_scene_qoi_animation.c  arm_2d_user_scene_qoi_animation.h  scene_app.c
01-arm_2d_sample_fire/src/scene/fire/: fire_sim.c  fire_sim.h  user_generic_loader_fire.c  user_generic_loader_fire.h
01-arm_2d_sample_fire/src/scene/index/: wali.c
01-arm_2d_sample_fire/src/scene/pic_source/: Arrow1.c  Arrow2.c  Arrow3.c  BarFrame.c  BarFrameFill.c  CircleR24W1.c  CircleR24W2.c  CircleR30W2.c  Connected.c  ConsoleFrame.c  ConsoleFrameFill.c  Disconnected.c  DownloadButton.c  FileFrame.c  FileFrameFill.c  Hexagon.c  HexagonFill.c  HexagonW2.c  HexagonW2out.c  IconDldPart1.c  IconDldPart2.c  IconIn.c  IconOut.c  IconSerial.c  IconSet.c  Island.c  IslandFill.c  ObserveP1.c  ObserveP2.c  ObserveP3.c  SlideBar.c  Small_download.c  Small_info.c  Small_scope.c  TextDownload.c  TextObserve.c  TextSerial.c  TextSet.c  TextShadow.c  WindowFill.c  (+18 more)
01-arm_2d_sample_fire/src/scene/scope/: my_scope.c  my_scope.h  scope_task.c  scope_task.h
01-arm_2d_sample_fire/src/scene/ttf_source/: Round12.c  Round16.c  Round20.c  Round24.c
common/adapt/: SDdriver.h  spi_sd_adapt.c
common/key_module/: key_driver.c  key_driver.h  key_module.c  key_module.h  key_task.c
common/lcd/: st7789.h
common/lcd/arm2d_port/: arm_2d_disp_adapter_0.c  arm_2d_disp_adapter_0.h  arm_2d_user_arch_port.h
common/lcd/arm2d_port/math/: cmsis_clang.h  cmsis_gcc.h
common/lcd/reference_gui/: ref_gui.h
common/soft_i2c/: soft_i2c.c  soft_i2c.h  soft_i2c_port.c
hpm5301evklite/: board.c  board.h  pinmux.c
