# Copyright (c) 2021 HPMicro
# SPDX-License-Identifier: BSD-3-Clause

cmake_minimum_required(VERSION 3.13)

SET(STACK_SIZE 0x1000)
SET(HEAP_SIZE 0x8000)

set(APP_NAME "MicroLink")
set(CONFIG_CHERRYUSB 1)
set(CONFIG_CHERRYRB 1)
set(CONFIG_USB_DEVICE 1)
set(CONFIG_USB_DEVICE_CDC 1)
set(CONFIG_USB_DEVICE_MSC 1)
set(CONFIG_DMA_MGR 1)
set(CONFIG_HPM_SPI 1)
set(CONFIG_SDMMC 1)
set(CONFIG_HPM_SPI_SDCARD 1)
set(CONFIG_FATFS 1)
set(CONFIG_RTTHREAD_NANO 1)

set(CUSTOM_GCC_LINKER_FILE ${CMAKE_CURRENT_SOURCE_DIR}/linkers/gcc/flash_xip.ld)
set(CUSTOM_SES_LINKER_FILE ${CMAKE_CURRENT_SOURCE_DIR}/linkers/segger/flash_xip.icf)
set(CUSTOM_IAR_LINKER_FILE ${CMAKE_CURRENT_SOURCE_DIR}/linkers/iar/flash_xip.icf)

find_package(hpm-sdk REQUIRED HINTS $ENV{HPM_SDK_BASE})

project(mklink_v4_app)

# 设置版本号
if (EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/.version)
    file(STRINGS ${CMAKE_CURRENT_SOURCE_DIR}/.version BUILD_VERSION)
    string(STRIP ${BUILD_VERSION} BUILD_VERSION)
    set(CONFIG_BUILD_VERSION ${BUILD_VERSION})
endif ()


sdk_app_inc(${CMAKE_CURRENT_SOURCE_DIR})
sdk_app_inc(../external/Arm-2D/Library/Include)
sdk_app_inc(../external/Arm-2D/Helper/Include)
sdk_app_inc(../external/Arm-2D/examples/common/benchmark)
sdk_app_inc(../external/Arm-2D/examples/common/controls)
sdk_app_inc(../external/Arm-2D/examples/common/controls/qrcode_box)
sdk_app_inc(../external/Arm-2D/examples/common/loader)
sdk_app_inc(../external/Arm-2D/examples/common/loader/generic_loader)
sdk_app_inc(../external/Arm-2D/examples/common/loader/tjpgd_loader)
sdk_app_inc(../external/Arm-2D/examples/common/loader/tjpgd_loader/tjpgd)
sdk_app_inc(../external/Arm-2D/examples/common/loader/zjpgd_loader)
sdk_app_inc(../external/Arm-2D/examples/common/loader/zjpgd_loader/zjpgd)
sdk_app_inc(../external/Arm-2D/examples/common/loader/zhrgb565_loader)
sdk_app_inc(../external/Arm-2D/examples/common/loader/zhrgb565_loader/zhrgb565)
sdk_app_inc(../external/Arm-2D/examples/common/loader/qoi_loader)
sdk_app_inc(../external/Arm-2D/examples/common/loader/qoi_loader/qoi_decoder)
sdk_app_inc(../external/Arm-2D/examples/common/loader/lmsk_loader)
sdk_app_inc(../external/Arm-2D/examples/common/loader/lmsk_loader/lmsk)
sdk_app_inc(../external/Arm-2D/examples/common/loader/lmsk_loader/lmsk/decoder)
sdk_app_inc(../external/Arm-2D/examples/common/loader/freetype_loader)
sdk_app_inc(../external/Arm-2D/examples/common/loader/freetype_loader/custom)
sdk_app_inc(../external/Arm-2D/examples/common/loader/freetype_loader/freetype)
sdk_app_inc(../external/Arm-2D/examples/common/loader/freetype_loader/freetype/include)
sdk_app_inc(../external/Arm-2D/examples/common/loader/freetype_loader/freetype/include/freetype)
sdk_app_inc(../external/Arm-2D/examples/common/loader/freetype_loader/freetype/include/freetype/config)
sdk_app_inc(../external/Arm-2D/examples/common/loader/freetype_loader/freetype/include/freetype/internal)
sdk_app_inc(../external/Arm-2D/examples/common/opcodes)
sdk_app_inc(../external/Arm-2D/examples/common/scenes/fitness)
sdk_app_inc(../external/Arm-2D/examples/common/scenes/meter)
sdk_app_inc(../external/Arm-2D/examples/common/scenes/watch)
sdk_app_inc(../external/Arm-2D/examples/common/scenes/alarm_clock)
sdk_app_inc(../external/Arm-2D/examples/common/scenes/histogram)
sdk_app_inc(../external/Arm-2D/examples/common/scenes/fan)
sdk_app_inc(../external/Arm-2D/examples/common/scenes/bubble_charging)
sdk_app_inc(../external/Arm-2D/examples/common/scenes/animate_background)
sdk_app_inc(../external/Arm-2D/examples/common/scenes/knob)
sdk_app_inc(../external/Arm-2D/examples/demos)
sdk_app_inc(../external/Arm-2D/examples/demos/monochrome)
sdk_app_inc(../external/notGUIyet/common)
sdk_app_inc(../external/notGUIyet/common/message)
sdk_app_inc(../external/notGUIyet/common/message/msg_frontend)
sdk_app_inc(../external/notGUIyet/references/navigation/reference_gui)
sdk_app_inc(../external/perf_counter)
sdk_app_inc(../external/MicroBootLoader/source)
sdk_app_inc(../external/MicroBootLoader/source/IPC/event)
sdk_app_inc(../external/MicroBootLoader/source/flash_algo)
sdk_app_inc(../external/MicroBootLoader/source/communication/subscribe_publish)
sdk_app_inc(common/adapt)
sdk_app_inc(lcd)
sdk_app_inc(lcd/arm2d_port)
sdk_app_inc(lcd/arm2d_port/math)
sdk_app_inc(lcd/arm2d_port/math/dsp)
sdk_app_inc(config)
sdk_app_inc(src)
sdk_app_inc(src/scene)
sdk_app_inc(src/scene/scope)
sdk_app_inc(src/scene/fire)
sdk_app_inc(src/flm_elf_parser)

sdk_app_src_glob(../external/Arm-2D/Library/Source/*.c)
sdk_app_src_glob(../external/Arm-2D/Helper/Source/*.c)
sdk_app_src_glob(../external/Arm-2D/examples/common/asset/*.c)
sdk_app_src_glob(../external/Arm-2D/examples/common/benchmark/*.c)
# sdk_app_src_glob(../external/Arm-2D/examples/common/loader/controls/*.c)
file(GLOB_RECURSE ARM2D_CONTROLS_SRC
        "../external/Arm-2D/examples/common/controls/*.c"
)
list(FILTER ARM2D_CONTROLS_SRC EXCLUDE REGEX ".*/template/.*")
sdk_app_src(${ARM2D_CONTROLS_SRC})
sdk_app_src_glob(../external/Arm-2D/examples/common/loader/tjpgd_loader/*.c)
sdk_app_src_glob(../external/Arm-2D/examples/common/loader/zhrgb565_loader/*.c)
sdk_app_src_glob(../external/Arm-2D/examples/common/loader/zjpgd_loader/*.c)
sdk_app_src_glob(../external/Arm-2D/examples/common/loader/qoi_loader/*.c)
sdk_app_src(../external/Arm-2D/examples/common/loader/lmsk_loader/lmsk_loader.c)
sdk_app_src(../external/Arm-2D/examples/common/loader/lmsk_loader/lmsk/decoder/arm_lmsk_decoder.c)
sdk_app_src(../external/Arm-2D/examples/common/loader/freetype_loader/freetype_loader.c)
sdk_app_src(../external/Arm-2D/examples/common/loader/__arm_2d_loader_common.c)
sdk_app_src(../external/Arm-2D/examples/common/loader/generic_loader/arm_2d_generic_loader.c)
sdk_app_src_glob(../external/Arm-2D/examples/common/opcodes/*.c)
# sdk_app_src_glob(../external/Arm-2D/examples/common/scenes/*.c)
# sdk_app_src_glob(../external/Arm-2D/examples/demos/*.c)
file(GLOB_RECURSE ARM2D_DEMO_SRC
        "../external/Arm-2D/examples/demos/*.c"
)
list(FILTER ARM2D_DEMO_SRC EXCLUDE REGEX ".*/arm_2d_scene_matrix|arm_2d_scene_space_badge|arm_2d_scene_mono_list|arm_2d_scene_waveform|arm_2d_scene_rickrolling|arm_2d_scene_menu|arm_2d_scene_iir_blur|arm_2d_scene_console_window|arm_2d_scene_qoi_animation|arm_2d_scene_filters|arm_2d_scene_radars\\.c$")
sdk_app_src(${ARM2D_DEMO_SRC})
sdk_app_src_glob(../external/notGUIyet/common/*.c)
sdk_app_src_glob(../external/notGUIyet/references/navigation/reference_gui/*.c)
sdk_app_src(../external/perf_counter/perf_counter.c)
sdk_app_src(../external/perf_counter/perfc_task_coroutine.c)
sdk_app_src_glob(src/*.c)
sdk_app_src_glob(common/*.c)
sdk_app_src_glob(../external/MicroBootLoader/source/check_agent_engine/*.c)
sdk_app_src_glob(../external/MicroBootLoader/source/communication/*.c)
sdk_app_src_glob(../external/MicroBootLoader/source/generic/*.c)
sdk_app_src_glob(../external/MicroBootLoader/source/IPC/event/*.c)
sdk_app_src_glob(lcd/*.c)
sdk_app_src(lcd/arm2d_port/arm_2d_disp_adapter_0.h)
sdk_app_src(config/user_app_cfg.h)
sdk_app_src(config/arm_2d_cfg.h)
sdk_app_src(config/rtconfig.h)
sdk_app_src(config/rg_app_cfg.h)
sdk_app_src(config/perfc_port_user.c)

# swj_clock default use keil swd frequency boost
sdk_compile_definitions(-DBOOST_KEIL_SWD_FREQ=0)

if (CONFIG_BUILD_VERSION)
    sdk_compile_definitions(-DCONFIG_BUILD_VERSION="${CONFIG_BUILD_VERSION}")
else ()
    sdk_compile_definitions(-DCONFIG_BUILD_VERSION="Debug")
endif ()

sdk_compile_definitions(-D_RTE_)
sdk_compile_definitions(-DCONFIG_NDEBUG_CONSOLE=1)
sdk_compile_definitions(-DZJD_USR_CFG="arm_zjpgd_cfg.h")
sdk_compile_definitions(-D__NGY_APP_CFG_HEADER_H__="rg_app_cfg.h")
sdk_compile_definitions(-D__FLASH_CFG_PORTING_INCLUDE__="flash_port_user.h")
sdk_compile_definitions(-D__QUEUE_CFG_PORTING_INCLUDE__="queue_port_user.h")
sdk_compile_definitions(-D__PERFC_CFG_PORTING_INCLUDE__="perfc_port_user.h")
sdk_compile_definitions(-D__PERFC_CFG_DISABLE_DEFAULT_SYSTICK_PORTING__=1)
sdk_compile_definitions(-D__PERFC_USE_USER_CUSTOM_PORTING__=1)
sdk_compile_definitions(-D__PERFC_USE_PORTING__=1)
#sdk_compile_definitions(-D__PERF_COUNTER__=1)
#sdk_compile_definitions(-D__PERF_CNT_USE_RTOS__=1)
sdk_compile_definitions(-D__RTE_PERFC_PORTING_USER_DEFINED__=1)
sdk_compile_definitions(-D__C_LANGUAGE_EXTENSIONS_PERFC_PT__=1)
sdk_compile_definitions(-D__C_LANGUAGE_EXTENSIONS_PERFC_COROUTINE__=1)
sdk_compile_definitions(-D__USER_APP_CFG_H__="user_app_cfg.h")
sdk_compile_definitions(-DPRODUCT_STRING="MicroLink PLUS")
sdk_compile_definitions(-DCONFIG_USB_HS)
sdk_compile_definitions(-DCONFIG_CHERRYDAP_USE_MSC)
sdk_compile_definitions(-DPIKA_CONFIG_ENABLE)
sdk_compile_definitions(-DFF_CODE_PAGE=437)
sdk_compile_options("-O3")

generate_ide_projects()

